/*
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        https://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
*/

syntax = "proto3";
import "google/protobuf/any.proto";
package NES;

/*
The serializable wrapper definition for data type objects
 */
message SerializableDataType{
  message Scalar{};
  message FixedList{
    int32 size = 1;
  };
  message VariableSizedList{};

  oneof shape {
    Scalar scalar = 1;
    FixedList list = 2;
    VariableSizedList varsized = 3;
  }
  string name = 4;
  bool nullable = 5;
  bytes impl = 6;
}
